--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -58,6 +58,24 @@
             <version>3.1</version>
         </dependency>
 
+        <!--Logging stuff-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-web</artifactId>
+            <version>2.2</version>
+            <!--<scope>runtime</scope>-->
+        </dependency>
+
 
         <!--Other third party dependencies-->
         <dependency>
@@ -164,17 +182,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--Tomcat  stuff-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <type>jar</type>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
