--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -38,8 +38,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <org.spring.version>3.2.5.RELEASE</org.spring.version>
         <org.spring.security.version>3.2.5.RELEASE</org.spring.security.version>
-        <org.hibernate.version>3.2.5.RELEASE</org.hibernate.version>
+
+        <!-- Maximum version compatible with spring 3.x: http://www.mkyong.com/hibernate/java-lang-classnotfoundexception-org-hibernate-service-jta-platform-spi-jtaplatform/-->
+        <!--<org.hibernate.version>4.3.8.Final</org.hibernate.version>-->
+        <org.hibernate.version>4.2.11.Final</org.hibernate.version>
+
     </properties>
+
 
     <build>
         <plugins>
@@ -378,70 +383,30 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>3.3.1.GA</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.4.0.GA</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-commons-annotations</artifactId>
-            <version>3.3.0.ga</version>
+            <version>${org.hibernate.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-search</artifactId>-->
-            <!--<verion>3.1.1.GA</version>-->
+            <!--<artifactId>hibernate-annotations</artifactId>-->
+            <!--<version>3.4.0.GA</version>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.4.0.GA</version>
-        </dependency>
         <!--<dependency>-->
-        <!--<groupId>org.hibernate</groupId>-->
-        <!--<artifactId>hibernate-validator</artifactId>-->
-        <!--<version>4.0.2.GA</version>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-commons-annotations</artifactId>-->
+            <!--<version>3.3.0.ga</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-entitymanager</artifactId>-->
+            <!--<version>3.4.0.GA</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.0.2.GA</version>
+            <version>4.3.2.Final</version>
             <type>jar</type>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-api</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-search-analyzers</artifactId>-->
-            <!--<version>3.4.0.Final</version>-->
-            <!--<type>jar</type>-->
-            <!--<scope>compile</scope>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.commons</groupId>-->
-                    <!--<artifactId>commons-io</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<artifactId>slf4j-api</artifactId>-->
-                    <!--<groupId>org.slf4j</groupId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<artifactId>lucene-core</artifactId>-->
-                    <!--<groupId>org.apache.lucene</groupId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-
-
-
 
         <dependency>
             <groupId>oracle</groupId>
@@ -581,14 +546,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>15.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.12.1.GA</version>
-            <type>jar</type>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
