--- a/MetaboLights-Search/service/pom.xml
+++ b/MetaboLights-Search/service/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${com.fasterxml.jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-domain</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
     
 </project>
