--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>metabolights-referencelayer-dao</artifactId>
-    <version>0.92-SNAPSHOT</version>
+    <version>4.0-SNAPSHOT</version>
     <name>MetaboLights Reference layer Data Access Object</name>
     <!--Migrated to slf4j + log4j-->
     <description>Reference layer Data Access Object</description>
@@ -40,9 +40,9 @@
 
     <dependencies>
 	    <dependency>
-	    	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-	    	<artifactId>metabolights-referencelayer-domain</artifactId>
-	    	<version>0.9-SNAPSHOT</version>
+	    	<groupId>uk.ac.ebi.metabolights</groupId>
+	    	<artifactId>metabolights-domain</artifactId>
+	    	<version>4.0-SNAPSHOT</version>
 	    </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
