--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -43,11 +43,6 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${com.fasterxml.jackson.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<version>14.0</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>net.java.openjfx.backport</groupId>
             <artifactId>openjfx-78-backport</artifactId>
@@ -72,6 +67,17 @@
             <version>${com.fasterxml.jackson.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.chebi.webapps.chebiWS.client</groupId>
+            <artifactId>chebiWS-client</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
     </dependencies>
+
 
 </project>
