--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -96,17 +96,17 @@
             <artifactId>ebinocle</artifactId>
             <version>1.0.4</version>
         </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.biobabel</groupId>
-            <artifactId>ebeye-client</artifactId>
-            <version>2.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j</artifactId>
-                    <groupId>log4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.ac.ebi.biobabel</groupId>-->
+            <!--<artifactId>ebeye-client</artifactId>-->
+            <!--<version>2.0.0</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>log4j</artifactId>-->
+                    <!--<groupId>log4j</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
             <artifactId>metabolights-referencelayer-dao</artifactId>
@@ -540,12 +540,6 @@
                     <groupId>commons-lang</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>15.0</version>
         </dependency>
 
         <dependency>
