--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -183,6 +183,43 @@
             </exclusions>
         </dependency>
 
+        <!-- Compounds dependencies migration from WEBAPP-->
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+            <artifactId>referencelayer-importer</artifactId>
+            <version>0.4-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-fileupload</artifactId>
+                    <groupId>commons-fileupload</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>activation</artifactId>
+                    <groupId>javax.activation</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.biobabel</groupId>
+            <artifactId>biobabel-citations</artifactId>
+            <version>2.0.3</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
         <!--Tomcat  stuff-->
         <dependency>
             <groupId>javax.servlet</groupId>
