--- a/metabolights-referencelayer/dao/pom.xml
+++ b/metabolights-referencelayer/dao/pom.xml
@@ -44,6 +44,17 @@
 	    	<artifactId>metabolights-domain</artifactId>
 	    	<version>4.0-SNAPSHOT</version>
 	    </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.rhea</groupId>
+            <artifactId>rhea-ws-client</artifactId>
+            <version>2.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j</artifactId>
+                    <groupId>log4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
 			<artifactId>biobabel-db</artifactId>
