--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -53,6 +53,13 @@
         </dependency>
 
         <dependency>
+            <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+            <artifactId>metabolights-referencelayer-dao</artifactId>
+            <version>4.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>service-es</artifactId>
             <version>4.0</version>
@@ -174,29 +181,29 @@
         </dependency>
 
         <!-- Compounds dependencies migration from WEBAPP-->
-        <dependency>
-            <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-            <artifactId>referencelayer-importer</artifactId>
-            <version>0.4-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-fileupload</artifactId>
-                    <groupId>commons-fileupload</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>guava</artifactId>
-                    <groupId>com.google.guava</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>activation</artifactId>
-                    <groupId>javax.activation</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>-->
+            <!--<artifactId>referencelayer-importer</artifactId>-->
+            <!--<version>0.4-SNAPSHOT</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>commons-fileupload</artifactId>-->
+                    <!--<groupId>commons-fileupload</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>guava</artifactId>-->
+                    <!--<groupId>com.google.guava</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>activation</artifactId>-->
+                    <!--<groupId>javax.activation</groupId>-->
+                <!--</exclusion>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>commons-logging</artifactId>-->
+                    <!--<groupId>commons-logging</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>uk.ac.ebi.biobabel</groupId>
             <artifactId>biobabel-citations</artifactId>
