--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>2.5.1-SNAPSHOT</version>
+            <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
