--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -250,6 +250,11 @@
             <artifactId>commons-compress</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
