--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -86,6 +86,11 @@
 
         <!--Other third party dependencies-->
         <dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.4.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${org.spring.version}</version>
