--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -50,8 +50,8 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <artifactId>Wikipathways-ws-client</artifactId>
-            <version>0.1</version>
+            <artifactId>metabolights-ws-client</artifactId>
+            <version>4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.mdk</groupId>
