--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -475,7 +475,7 @@
             <scope>test</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>uk.ac.ebi.pride.web</groupId>
             <artifactId>pride-web-utils</artifactId>
             <version>1.3.2</version>
@@ -529,7 +529,7 @@
                     <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
