--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -194,6 +194,13 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+
+
 
 
         <!--Logging stuff-->
